# ImPondering

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
include/: imponder.cpp  imponder.h
sample/: CMakeLists.txt  example.cpp  example.h  main.cpp
src/: CMakeLists.txt
src/imponder/: CMakeLists.txt  example.h
